# arabic-nlp-toolkit

./: .github.workfow.publish.yml  AUTHORE.md  CHNGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  Project Structure  README.md  TODO.md  VERSSIO.md  arabic-nlp-toolkit  devcontainer  examply.py  github.worflows.unzip. yml  gitignore  pyproject.toml  quick_test.py  requirements.txt  results.txt  setup.py  src.arabic-nlp-toolkit.utils. py  src.arabic_nlp_toolkit.core. py  src.arabic_nlp_toolkit_init_.py  tests.test_basic.py  tests.test_core.py
.github/workflows/: codeql.yml
arabic_nlp_toolkit/: __init__.py  analyzer.py  normalizer.py  stemmer.py  stopwords.py  tokenizer.py
examples/: example.py
src/: src.arabic-nlp-toolkit.init.py
