[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arabic-nlp-toolkit" 
version = "0.0.1" # <<< يمكن تعديل هذا الرقم
description = "A comprehensive toolkit for Arabic Natural Language Processing."
readme = "README.md"
authors = [
  {name = "Nidal Watfa", email = "your_email@example.com"}, # <<< عدّل بريدك الإلكتروني هنا
]
license = {file = "LICENSE"}
requires-python = ">=3.8"
keywords = ["arabic", "nlp", "python"]

# التبعيات (Dependencies): إذا كانت حزمتك تعتمد على مكتبات أخرى مثل NumPy، أضفها هنا
dependencies = [
    # مثال: "numpy>=1.20", "pandas"
]

[project.urls]
Homepage = "https://github.com/nidalwatfa/arabic-nlp-toolkit"
Issues = "https://github.com/nidalwatfa/arabic-nlp-toolkit/issues"
