[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arabic-nlp-toolkit" 
version = "0.0.1"
description = "A comprehensive toolkit for Arabic Natural Language Processing."
readme = "README.md"
authors = [
  {name = "Nidal Watfa", email = "nidalwatfa99@gmail.com"},
]
license = {file = "LICENSE"}
requires-python = ">=3.8"
keywords = ["arabic", "nlp", "python", "natural-language-processing", "text-processing"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: Arabic",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    # أضف تبعيات مشروعك هنا حسب الحاجة
    # مثال: "numpy>=1.20", "pandas>=1.3"
]

[project.urls]
Homepage = "https://github.com/nidalwatfa/arabic-nlp-toolkit"
Issues = "https://github.com/nidalwatfa/arabic-nlp-toolkit/issues"
Repository = "https://github.com/nidalwatfa/arabic-nlp-toolkit"
